cabal-version: 3.0

name:           moire
version:        0.0.0.0
homepage:       https://github.com/evanrelf/moire
bug-reports:    https://github.com/evanrelf/moire/issues
author:         Evan Relf <evan@evanrelf.com>
maintainer:     Evan Relf <evan@evanrelf.com>
copyright:      2019 Evan Relf
license:        ISC
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/evanrelf/moire.git

executable moire
  main-is: Main.hs
  hs-source-dirs: src
  -- other-modules:
  build-depends:
      base >= 4.7 && < 5.0
    , relude ^>= 0.5.0
    , optparse-applicative
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    TupleSections
    TypeApplications
    TypeOperators
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-export-lists
    -Wredundant-constraints
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -fshow-warning-groups
    -foptimal-applicative-do
    -threaded
    -rtsopts
    -with-rtsopts=-N
